--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.4.2",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
@@ -17,6 +18,7 @@
     "vite-plugin-solid": "^2.2.6"
   },
   "dependencies": {
+    "canvas-confetti": "^1.5.1",
     "solid-js": "^1.4.2"
   }
 }
