--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@types/canvas-confetti": "^1.4.2",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.4",
-    "vite": "^2.9.9",
-    "vite-plugin-solid": "^2.2.6"
+    "@types/canvas-confetti": "1.6.0",
+    "autoprefixer": "10.4.13",
+    "postcss": "8.4.19",
+    "tailwindcss": "3.2.4",
+    "typescript": "4.9.3",
+    "vite": "3.2.4",
+    "vite-plugin-solid": "2.4.0"
   },
   "dependencies": {
-    "canvas-confetti": "^1.5.1",
-    "solid-js": "^1.4.2"
+    "canvas-confetti": "1.6.0",
+    "solid-js": "1.6.2"
   }
 }
