--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/canvas-confetti": "1.6.0",
     "autoprefixer": "10.4.13",
     "postcss": "8.4.19",
+    "prettier": "2.7.1",
+    "prettier-plugin-tailwindcss": "0.1.13",
     "tailwindcss": "3.2.4",
     "typescript": "4.9.3",
     "vite": "3.2.4",
