--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "vite-template-solid",
+  "name": "charlie.social",
   "version": "0.0.0",
   "description": "",
+  "type": "module",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "dev": "solid-start dev",
+    "build": "solid-start build",
+    "start": "solid-start start"
   },
   "devDependencies": {
     "@types/canvas-confetti": "1.6.0",
     "autoprefixer": "10.4.13",
     "postcss": "8.4.19",
-    "prettier": "2.7.1",
-    "prettier-plugin-tailwindcss": "0.1.13",
+    "prettier": "2.8.0",
+    "prettier-plugin-tailwindcss": "0.2.0",
+    "solid-start-node": "0.2.6",
     "tailwindcss": "3.2.4",
     "typescript": "4.9.3",
-    "vite": "3.2.4",
-    "vite-plugin-solid": "2.4.0"
+    "vite": "3.2.4"
   },
   "dependencies": {
+    "@solidjs/meta": "0.28.2",
+    "@solidjs/router": "0.5.1",
     "canvas-confetti": "1.6.0",
-    "solid-js": "1.6.2"
+    "solid-js": "1.6.2",
+    "solid-start": "0.2.6",
+    "undici": "5.13.0"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
