--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   "devDependencies": {
     "@types/canvas-confetti": "1.6.0",
     "autoprefixer": "10.4.13",
-    "postcss": "8.4.19",
-    "prettier": "2.8.0",
-    "prettier-plugin-tailwindcss": "0.2.0",
-    "solid-start-node": "0.2.7",
-    "tailwindcss": "3.2.4",
-    "typescript": "4.9.3",
-    "vite": "3.2.4"
+    "postcss": "8.4.21",
+    "prettier": "2.8.4",
+    "prettier-plugin-tailwindcss": "0.2.3",
+    "solid-start-node": "0.2.22",
+    "tailwindcss": "3.2.7",
+    "typescript": "4.9.5",
+    "vite": "3.2.5"
   },
   "dependencies": {
     "@solidjs/meta": "0.28.2",
-    "@solidjs/router": "0.5.1",
+    "@solidjs/router": "0.7.0",
     "canvas-confetti": "1.6.0",
-    "solid-js": "1.6.2",
-    "solid-start": "0.2.7",
-    "solid-start-vercel": "0.2.7",
-    "undici": "5.13.0"
+    "solid-js": "1.6.11",
+    "solid-start": "0.2.22",
+    "solid-start-netlify": "0.2.22",
+    "solid-start-vercel": "0.2.22",
+    "undici": "5.20.0"
   }
 }
