--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "vite": "4.2.1"
   },
   "dependencies": {
+    "@solidjs/router": "0.8.2",
     "canvas-confetti": "1.6.0",
+    "meta": "link:@@solidjs/meta",
     "solid-js": "1.7.2",
     "solid-start": "0.2.25",
     "solid-start-netlify": "0.2.25"
