--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "canvas-confetti": "1.9.2",
     "solid-js": "1.8.7",
     "vinxi": "0.0.62"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "vinxi@0.0.62": "patches/vinxi@0.0.62.patch"
+    }
   }
 }
